<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F7"
    tools:context=".ui.DataTransferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp">

            <ImageButton
                android:id="@+id/bt_data_transfer_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/back_btn" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data_transfer_activity_title"
                android:textColor="#3C3C3C"
                android:textSize="22sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/data_transfer_section_title"
                    android:textColor="#3C3C3C"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/data_transfer_section_subtitle"
                    android:textColor="#6A6A6A"
                    android:textSize="12sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:contentPaddingBottom="5dp"
                    app:contentPaddingLeft="20dp"
                    app:contentPaddingRight="20dp"
                    app:contentPaddingTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#C5C5C5"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <LinearLayout
                            android:id="@+id/ll_data_transfer_llm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_llm_item"
                                    android:textColor="#000000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_llm_tip"
                                    android:textColor="#6A6A6A"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <Switch
                                android:id="@+id/sw_data_transfer_llm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:showText="false"
                                android:thumb="@drawable/switch_thumb"
                                android:track="@drawable/switch_track"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_data_transfer_asr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_asr_item"
                                    android:textColor="#000000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_asr_tip"
                                    android:textColor="#6A6A6A"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <Switch
                                android:id="@+id/sw_data_transfer_asr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:showText="false"
                                android:thumb="@drawable/switch_thumb"
                                android:track="@drawable/switch_track"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_data_transfer_templates"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_template_item"
                                    android:textColor="#000000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_template_tip"
                                    android:textColor="#6A6A6A"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <Switch
                                android:id="@+id/sw_data_transfer_templates"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:showText="false"
                                android:thumb="@drawable/switch_thumb"
                                android:track="@drawable/switch_track"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_data_transfer_chats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_chat_item"
                                    android:textColor="#000000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_chat_tip"
                                    android:textColor="#6A6A6A"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <Switch
                                android:id="@+id/sw_data_transfer_chats"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:showText="false"
                                android:thumb="@drawable/switch_thumb"
                                android:track="@drawable/switch_track"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/data_transfer_action_title"
                    android:textColor="#3C3C3C"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/data_transfer_action_subtitle"
                    android:textColor="#6A6A6A"
                    android:textSize="12sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:contentPaddingBottom="5dp"
                    app:contentPaddingLeft="20dp"
                    app:contentPaddingRight="20dp"
                    app:contentPaddingTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#C5C5C5"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <LinearLayout
                            android:id="@+id/ll_data_transfer_export"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_export_item"
                                    android:textColor="#000000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_export_tip"
                                    android:textColor="#6A6A6A"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/right_img" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_data_transfer_import"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_import_item"
                                    android:textColor="#000000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/data_transfer_import_tip"
                                    android:textColor="#6A6A6A"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/right_img" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/data_transfer_rule_tip"
                    android:textColor="#6A6A6A"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
