<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F5F5F6F7"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:contentPadding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fetch_model_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_model_fetch_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_fetch_model_dialog_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/custom_model_fetch_subtitle"
                android:textAlignment="center"
                android:textColor="#6A6A6A"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_fetch_model_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/fetch_model_dialog_item" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_fetch_model_dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#D0D0D0"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/tv_fetch_model_dialog_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/confirm_dialog_default_cancel_text"
                        android:textColor="#3C3C3C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_fetch_model_dialog_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/tag_background_unselected"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/tv_fetch_model_dialog_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/custom_model_conf_add"
                        android:textColor="#408E44"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
